fix scrollbar issue on mobile

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -85,6 +85,11 @@ body {
   font-family: 'Sacramento', cursive;
   max-width: 100vw;
   overflow: hidden;
+
+  //for rsvp
+  @media (max-width: 456px) {
+    overflow: scroll;
+  }
 }
 
 body {
